<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lugassi.wallach.android5778_2638_6575.controller.Settings">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/OrangeRed"
        android:padding="15dp"
        android:text="@string/textSettings"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="30dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <Button
            android:id="@+id/userAndPasswordButton"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_shape"
            android:textColor="@color/Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonUserSettings" />

        <Button
            android:id="@+id/personalButton"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/buttonPersonalSettings" />

    </LinearLayout>

</LinearLayout>
